# SceneHub

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/command_executor/: CMakeLists.txt  command_executor.c  command_executor_audio.c  command_executor_hardware.c  command_executor_internal.h  command_executor_mqtt.c  command_executor_result.c
components/command_executor/include/: command_executor.h
components/gm_core/: CMakeLists.txt  gm_api.c  gm_game_profile.c  gm_room_session.c  gm_room_session_commands.c  gm_room_session_events.c  gm_room_session_game.c  gm_room_session_internal.h  gm_room_session_reactive_v2.c  gm_room_session_runtime.c  gm_room_session_runtime_wait.c  gm_timer.c
components/gm_core/api/: gm_api.c
components/gm_core/control/: gm_control.c
components/gm_core/hint/: gm_hint.c
components/gm_core/include/: gm_api.h  gm_control.h  gm_game_profile.h  gm_hint.h  gm_room_session.h  gm_timer.h
components/gm_core/profile/: gm_game_profile.c
components/gm_core/session/: gm_room_session.c  gm_room_session_commands.c  gm_room_session_commands_internal.h  gm_room_session_events.c  gm_room_session_game.c  gm_room_session_internal.h  gm_room_session_projection_internal.h  gm_room_session_reactive_internal.h  gm_room_session_reactive_v2.c  gm_room_session_runner_internal.h  gm_room_session_runtime.c  gm_room_session_runtime_wait.c  gm_room_session_view.c  gm_room_session_wait_internal.h
components/gm_core/sidebar/: gm_sidebar_presets.c  gm_sidebar_presets_internal.h  gm_sidebar_presets_storage.c
components/gm_sidebar_store/: CMakeLists.txt  gm_sidebar_presets_json.c
components/gm_sidebar_store/include/: gm_sidebar_presets.h
components/hardware_io/: CMakeLists.txt  hardware_io.c  hardware_io_gpio.c  hardware_io_input.c  hardware_io_internal.h  hardware_io_io.c  hardware_io_io_internal.h  hardware_io_io_runtime.c  hardware_io_mosfet.c  hardware_io_mosfet_effects.c  hardware_io_relay.c
components/hardware_io/include/: hardware_io.h
components/orchestrator_core/: CMakeLists.txt
components/orchestrator_core/audit/: orchestrator_audit.c
components/orchestrator_core/registry/: orch_common.c  orch_device_view.c  orch_issue_builder.c  orch_room_scenario_view.c  orch_room_view.c  orch_snapshot_builder.c  orchestrator_registry.c  orchestrator_registry_internal.h
components/orchestrator_core/timeline/: orchestrator_timeline.c
components/room_scenario/: CMakeLists.txt  room_scenario.c  room_scenario_device_refs.c  room_scenario_internal.h  room_scenario_json.c  room_scenario_json_export.c  room_scenario_json_import_reactive.c  room_scenario_persistence.c  room_scenario_types.c  room_scenario_validation.c
components/room_scenario/include/: room_scenario.h
components/room_scenario/json/: room_scenario_json.c  room_scenario_json_export.c  room_scenario_json_import_reactive.c
components/room_scenario/storage/: room_scenario_persistence.c
components/scenehub_control/: CMakeLists.txt  scenehub_control.c  scenehub_control_devices.c  scenehub_control_dispatch.c  scenehub_control_hardware_io.c  scenehub_control_internal.h  scenehub_control_profiles.c  scenehub_control_rooms.c  scenehub_control_scenarios.c  scenehub_control_sidebar_presets.c
components/scenehub_control/include/: scenehub_control.h
components/scenehub_read_model/: CMakeLists.txt  orch_common.c  orch_device_view.c  orch_issue_builder.c  orch_room_profile_view.c  orch_room_scenario_view.c  orch_room_view.c
components/scenehub_read_model/include/: orch_device_view.h  orch_issue_view.h  orch_profile_view.h  orch_registry_snapshot.h  orch_room_view.h  orch_runtime_view.h  orch_scenario_view.h  orchestrator_registry.h
components/scenehub_read_model/registry/: orch_registry_runtime_assets.c  orch_registry_runtime_view.c  orch_registry_step_schemas.c  orchestrator_registry.c  orchestrator_registry_internal.h
components/scenehub_state/: CMakeLists.txt  scenehub_state.c
components/scenehub_state/include/: scenehub_state.h
components/web_ui/: CMakeLists.txt  orchestrator_api_view.c  orchestrator_api_view.h  orchestrator_api_view_activity.c  orchestrator_api_view_control_devices.c  orchestrator_api_view_room_scenarios.c  web_ui.c  web_ui_auth.c  web_ui_auth.h  web_ui_auth_gate.c  web_ui_auth_handlers.c  web_ui_auth_internal.h  web_ui_auth_reset.c  web_ui_auth_sessions.c  web_ui_devices.c  web_ui_devices.h  web_ui_gm.c  web_ui_gm_action.c  web_ui_gm_hint.c  web_ui_gm_profile.c  web_ui_gm_quest_device.c  web_ui_gm_scenario.c  web_ui_gm_scenario_catalog.c  web_ui_gm_scenario_store.c  web_ui_gm_timer.c  web_ui_handlers.h  web_ui_hardware_io.c  web_ui_http_adapter.c  web_ui_json_responses.c  web_ui_media.c  web_ui_meta.c  web_ui_orchestrator.c  web_ui_ota.c  web_ui_page.c  web_ui_page.h  web_ui_scenehub_control_responses.c  web_ui_status.c  web_ui_system.c  web_ui_utils.c  web_ui_utils.h
components/web_ui/assets/: build_gm_panel.py  check_gm_panel_bundle.py  gm_panel.css  gm_panel.js
components/web_ui/gm/: web_ui_gm.c  web_ui_gm_action.c  web_ui_gm_hint.c  web_ui_gm_profile.c  web_ui_gm_quest_device.c  web_ui_gm_quest_device_json.c  web_ui_gm_quest_device_json.h  web_ui_gm_runtime_json_writer.c  web_ui_gm_runtime_json_writer.h  web_ui_gm_scenario.c  web_ui_gm_scenario_catalog.c  web_ui_gm_scenario_store.c  web_ui_gm_sidebar_presets.c  web_ui_gm_timer.c
components/web_ui/orchestrator/: orchestrator_api_view.c  orchestrator_api_view.h  orchestrator_api_view_activity.c  orchestrator_api_view_control_devices.c  orchestrator_api_view_room_scenarios.c  orchestrator_scenario_layout_writer.c  orchestrator_scenario_layout_writer.h  web_ui_orchestrator.c
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/src/: controller_http.rs  discovery.rs  http_proto.rs  lib.rs  main.rs
scenehub_node_v1/esp_idf/main/: CMakeLists.txt  node_main.c
tests/backend_core/main/: CMakeLists.txt  test_audio_player_state.c  test_config_store_utils.c  test_event_bus.c  test_quest_device.c  test_room_catalog.c  test_room_scenario.c  test_suite_backend_core.c
(+522 files in other folders)
