[package]
name = "scenehub-desktop"
version = "0.1.0"
description = "SceneHub Desktop Console"
authors = ["SceneHub"]
edition = "2021"

[package.metadata]
product-name = "SceneHub Desktop"

[lib]
name = "scenehub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
